# IGCN

./: .gitignore  pyproject.toml  pyproject.toml.bak  requirements.txt
igcn/: fetcher.py  first_steps.py  layers.py  model.py  render.py  train.py  utils.py
