[tool.poetry]
name = "igcn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">1.0.0"
opencv-python = ">2.0.0.0"
scikit-image = ">0.10.0"
tflearn = ">0.1.0"
scipy = ">1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
